<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    android:label="User Detai"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.home.HomeFragment"
        android:label="@string/action_bar_title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/exploreFragment"
        android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.explore.ExploreFragment"
        android:label="@string/action_bar_title_explore"
        tools:layout="@layout/fragment_explore" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="id.rllyhz.dicodingsubmissionbfaa.ui.feature.profile.ProfileFragment"
        android:label="@string/action_bar_title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>